--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h3>Nordeste</h3>
                 </a>
                 <a href="Norte.html" class="region-card">
-                    <img src="/images/Norte-migration.svg">
+                    <img src="images/Norte-migration.svg">
                     <h3>Norte</h3>
                 </a>
                 <a href="Sul.html" class="region-card">
